# weather-data-pipeline-airflow

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  transform.ipynb
.ipynb_checkpoints/: transform-checkpoint.ipynb
config/: airflow.cfg  database.py  kafka.py  logging.py
consumer/: weather_consumer.py
dags/: weather_pipeline.py
producer/: weather_producer.py
weather_dbt/: .user.yml  dbt_project.yml  profiles.yml
weather_dbt/models/weather_summary/: schema.yml  weather_summary.sql
weather_dbt/seeds/: users.csv
weather_dbt/snapshots/: weather_snapshot.sql
